2002-08-02  Jeff Freedman  <jeff@amy.nerble.net>

	* monsters.cc (Monster_actor): When using monster itself as
	weapon, return the shape.  Should fix problem where slimes weren't
	doing any damage.
	* combat.cc:  Remove dead NPC's from opponents list.  Fixes
	problem where party stands around not attacking remaining monsters.

	* usecode/intrinsics.cc: To make combat spell-casting work,
	click_on_item now takes the target of the caller_item.  Let me
	know if this breaks anything.

2002-07-31  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* mouse.cc: fixed uninitialized variables (box,dirty)
	* shapeid.cc: delete -> delete[]

2002-07-31  Jeff Freedman  <jeff@amy.nerble.net>

	* gumps/Spellbook_gump.cc,objs/spellbook.cc:  Move functionality
	to Spellbook_object in preparation for spellbook combat.

2002-07-30  Jeff Freedman  <jsf@usf-cf-x86-linux-1>

	* gamemap.cc,spellbook.{cc,h}:  Save/restore bookmarked spell.
	* shapes/vgafile.cc:  Update image when offsets are changed.

2002-07-29  Jeff Freedman  <jeff@amy.nerble.net>

	* tqueue.cc,gamewin.cc,Gump_manager.cc:  Pause time queue (with
	Text_effects as an exception) whenever gumps are open.

2002-07-28  Jeff Freedman  <jeff@amy.nerble.net>

	* effects.cc,gamerend.cc:  Text_effects are in a separate list.
	* gamerend.cc:  Show sprites below gumps, text over them.

2002-07-28  Ryan Nunn  <triforce@merlin.net.au>
	* pathfinder/path.cc : Fixed seriously broken non hash pathfinding (z 
	  coord was being ignored in comparisons of nodes). This fixes the
	  Monitor Training problem. Probably fixes countless other pathfinding
	  problems too.

2002-07-27  Max Horn  <max@quendi.de>

	* audio/Audio.cc: Replaced the pseudo-breshenham audio interpolation code
	with 'proper' cubic interpolation code.

2002-07-27  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* monstinf.*: armur? armour! ;-)

2002-07-27  Jeff Freedman  <jeff@amy.nerble.net>

	* combat.cc: Call ready_ammo() if NPC needs it.
