@@ -1,5 +1,6 @@
 2002-08-02  Jeff Freedman  <jeff@amy.nerble.net>
 
+	* objs.cc,objs.h:  Game_object::add will try to combine.
 	* monsters.cc (Monster_actor): When using monster itself as
 	weapon, return the shape.  Should fix problem where slimes weren't
 	doing any damage.
